# AlsaJsonGateway

./: .gitignore  Makefile  Makefile.am  README.md  configure.ac
built/: daemon-ajg  httpd
include/: local-def-ajg.h  proto-def-ajg.h
samples/: CARD_GET_ALL.ajg  CARD_GET_NAME.ajg  CARD_GET_ONE.ajg  CTRL_GET_ALL-hw:18i20.ajg  CTRL_GET_ALL-hw:18i8.ajg  CTRL_GET_ALL-hw:6i6.ajg  CTRL_GET_ONE.ajg  CTRL_SET_MANY.ajg  CTRL_SET_ONE.ajg  README.md
src/: Makefile  Makefile.am  alsa-ajg.c  config-ajg.c  display-ajg.c  httpd-ajg.c  main-ajg.c  session-ajq.c
utils/autostart/: ajg-start.sh
utils/debian/: README.MD  changelog  control  postinst  rules
utils/qjackctrl/: Install-QjackCtrl.sh  QjackCtrl.sh  README.md
utils/rpmbuilt/: alsa-json-gw.spec
